--- a/storymasters.css
+++ b/storymasters.css
@@ -374,6 +374,10 @@ i{
   margin-left: auto; /* Move the section to the right side */
 }
 
+#character-level-input {
+  height: 20px;
+}
+
 @media (max-width: 830px) {
   .remove-char-btn {
     border-left: none;
